<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/tonystark" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/imgTonyStark"
                android:text="@string/tony_stark"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtName"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/imgTonyStark"
                android:text="@string/tony_starkindustries_com"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmail"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/imgTonyStark"
                android:text="@string/_91_9937800632"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgSteve"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/captain" />

            <TextView
                android:id="@+id/txtNameSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgSteve"
                android:text="@string/steve_rogers"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameSteve"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgSteve"
                android:text="@string/steve_rogers_com"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPhoneNumberSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailSteve"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgSteve"
                android:text="@string/_91_9937618743"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgThor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/thor" />

            <TextView
                android:id="@+id/txtNameThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="@string/thor_odinson"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameThor"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="@string/thor_starkindustries_com"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPhoneNumberThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailThor"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="@string/_91_33355555"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgHulk"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/hulk" />

            <TextView
                android:id="@+id/txtNameHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="@string/dr_bruce_banner"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameHulk"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="@string/bruce_starkindustries_com"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPhoneNumberHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailHulk"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="@string/_91_44455555"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>