<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imgAvengerLogo"
        android:layout_width="230dp"
        android:layout_height="180dp"
        android:src="@drawable/avengers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMobileNumber"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/imgAvengerLogo"
        android:padding="6dp"
        android:inputType="number"
        android:maxLength="10"
        android:hint="@string/enter_your_number"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etMobilePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:maxLength="6"
        android:padding="6dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobilePassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#880e4f"
        android:padding="6dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:backgroundTint="@color/marun" />
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/forgot_password"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp"/>
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp"
        android:layout_marginBottom="30dp"/>
</RelativeLayout>